--- a/app/components/cms_enrichment_list_component/cms_enrichment_list_component.scss
+++ b/app/components/cms_enrichment_list_component/cms_enrichment_list_component.scss
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  column-gap: 54px;
 }
 
 .enrichment-filters {
